# i18n

./: COMPLETION_SUMMARY.md  Cargo.toml  FILE_INDEX.md  QUICKSTART.md  README.md  audio_metadata.json
docs/: ARCHITECTURE.md  README.md  languages.md
inspirations/: README.md  tts.py
playgrounds/: README.md  audio_metadata.json
src/: error.rs  lib.rs
src/locale/: constants.rs  google.rs  microsoft.rs  mod.rs
src/tts/: constants.rs  edge.rs  google.rs  mod.rs
